Fix image alignment

--- a/client/blocks/support-article-dialog/content.scss
+++ b/client/blocks/support-article-dialog/content.scss
@@ -72,6 +72,7 @@
 	}
 
 	figure img {
+		display: inherit;
 		margin-bottom: 0;
 	}
 
